⚡️ perf: N+1 쿼리를 배치조회로 수정
리스트를 순회하며 아이템마다 리포지토리를 호출하던 지점들을, 이미
UserService에 있던 배치조회+Map 패턴으로 통일해서 고쳤다.

- PostService.buildListItem → buildListItems: 게시글 목록(내 모집글/
  공모전별 모집글) 조회 시 게시글당 6~7개 쿼리를 postIds 기준 배치로
  교체
- ChatService.getChatRooms: 채팅방 목록 조회 시 방마다 중복 쿼리
  (buildGroupChatRoomResponse/getTeamMembers가 같은 방 멤버를 각각
  조회하던 것)를 배치 조회로 통합
- averageRatingOf → averageRatingsOf: 후보/지원자 평균 별점 배치 조회
- buildLikedPost: 좋아요한 게시글 목록에서 Post LAZY 프록시 접근으로
  인한 숨은 N+1 수정

로컬에서 hibernate.generate_statistics(application-local.yml)로 수정
전/후 쿼리 수 비교로 검증.